hero added and fix header

--- a/index.css
+++ b/index.css
@@ -1,7 +1,8 @@
 [data-theme='light']:root {
 
   /* Superfícies */
-  --color-background-primary: #F6F8FC;
+  --color-background-primary: #fff;
+  --color-background-primary-reverse: #00020e;
   --color-background-secondary: #FAFAFA;
   --color-background-tertiary: #F2F2F2;
   --color-background-4th: #D7DCEB;
@@ -9,20 +10,10 @@
   --color-background-hover: #E1E5EA;
   --color-background-active: #F0F3FB;
   --color-background-detail: #D7DCEB;
-  --color-background-highlight: #265FFF;
-  --color-background-warning: #FF7E3E;
-  --color-background-error: #F24A46;
   --color-background-cards: #FAFAFA;
   --color-background-blocked: #EAEDEF;
+  --color-background-glass: rgba(255, 255, 255, 0.15);
 
-  /* Scrollbar */
-  --color-background-scrollbar-track: #f2f2f2;
-  --color-background-scrollbar-thumb: #ADBBD4;
-
-  /* Tooltip */
-  --color-background-tooltip: #172258;
-  --color-text-tooltip: #fff;
-  --color-shadow-tooltip: #6E799940;
 
   /* Overlay | PopupFade */
   --color-background-overlay: rgba(40, 40, 80, 0.20);
@@ -36,32 +27,19 @@
   --color-text-secondary: #485260;
   --color-text-tertiary: #798090;
   --color-text-disable: #B0B6C1;
-  --color-text-highlight: #265FFF;
-  --color-text-warning: #FF7E3E;
-  --color-text-error: #F24A46;
-  --color-text-button-primary: #FFFFFF;
+  --color-text-button-white: #FFFFFF;
   --color-text-button-secondary: #265fff;
   --color-text-button-theme: #485260;
   --color-text-button-theme-hover: #FFFFFF;
   --color-text-button-delete: #F24A46;
 
   /* Contornos */
-  --color-outline-white: 1px solid #fafafa;
-  --color-outline-primary: 1px solid #265FFF;
+  --color-outline-primary: 1px solid #fafafa;
   --color-outline-secondary: 1px solid #D7DCEB;
   --color-outline-secondary-variable: #D7DCEB;
   --color-outline-tertiary: 1px solid #B7BCCB;
   --color-outline-tertiary-variable: #B7BCCB;
 
-  /* TAGs */
-  --color-tag-bg-first: #FF405C33;
-  --color-tag-bg-second: #2AD0A033;
-  --color-tag-bg-third: #741CFF33;
-  --color-tag-bg-fourth: #FF17A233;
-  --color-tag-bg-fiveth: #FF7E3E33;
-  --color-tag-bg-sixth: #00AFDF33;
-  --color-tag-bg-seventh: #FFA50033;
-  --color-tag-bg-eighth: #265fff33;
 
   /* Botões de ação */
   --color-background-button-primary-default: #265FFF;
@@ -71,14 +49,12 @@
   --color-background-button-tertiary-default: transparent;
   --color-background-button-tertiary-hover: #F1F3F6;
   --color-background-button-theme: transparent;
-  --color-background-button-theme-hover: #1D2853;
+  --color-background-button-theme-hover: #1e1e1e;
 
   /* Cor dos ícones */
   --color-icon-primary: #FFF;
   --color-icon-secondary: #39496D;
   --color-icon-tertiary: #798090;
-  --color-icon-quaternary: #256fff;
-  --color-icon-highlight: #256fff;
 
 }
 
@@ -87,67 +63,47 @@
 [data-theme='dark']:root {
 
   /* Superfícies */
-  --color-background-primary: #060A25;
-  --color-background-secondary: #13132E;
-  --color-background-tertiary: #1C2248;
-  --color-background-4th: #2B315C;
-  --color-background-5th: #2d366d;
+  --color-background-primary: #00020e;
+  --color-background-primary-reverse: #fff;
+  --color-background-secondary: #0f0f0f;
+  --color-background-tertiary: #1e1e1e;
+  --color-background-4th: #2d2d2d;
+  --color-background-5th: #3c3c3c;
   --color-background-hover: #265FFF4D;
   --color-background-active: #172258;
   --color-background-detail: #A9AFD4;
-  --color-background-highlight: #265FFF;
-  --color-background-warning: #FF7E3E;
-  --color-background-error: #F24A46;
   --color-background-cards: #191939;
   --color-background-blocked: #0e122b;
+  --color-background-glass: rgba(0, 0, 0, 0.4);
 
-  /* Scrollbar */
-  --color-background-scrollbar-track: #1C2248;
-  --color-background-scrollbar-thumb: #8087b9;
-
-  /* Tooltip */
-  --color-background-tooltip: #3d4a9b;
-  --color-text-tooltip: #fff;
-  --color-shadow-tooltip: #1b2364;
 
   /* Overlay | PopupFade */
   --color-background-overlay: rgba(134, 149, 215, 0.2);
 
+
   /* Sombras */
   --color-shadow-primary: hsla(232, 88%, 7%, 0.90);
   --color-shadow-widgets: rgba(30, 36, 79, 0.80);
+
 
   /* Tipografia */
   --color-text-primary: #FAFAFA;
   --color-text-secondary: #E1E1E5;
   --color-text-tertiary: #b7b7c0;
   --color-text-disable: #c2c2cc;
-  --color-text-highlight: #265FFF;
-  --color-text-warning: #FF7E3E;
-  --color-text-error: #F24A46;
-  --color-text-button-primary: #FFFFFF;
+  --color-text-button-white: #FFFFFF;
   --color-text-button-secondary: #fafafa;
   --color-text-button-theme: #fff;
-  --color-text-button-theme-hover: #485260;
+  --color-text-button-theme-hover: #1e1e1e;
   --color-text-button-delete: #FFFFFF;
 
   /* Contornos */
-  --color-outline-white: 1px solid #fafafa;
-  --color-outline-primary: 1px solid #265FFF;
-  --color-outline-secondary: 1px solid #2B315C;
-  --color-outline-secondary-variable: #2B315C;
+  --color-outline-primary: 1px solid #fafafa;
+  --color-outline-secondary: 1px solid #76767a;
+  --color-outline-secondary-variable: #76767a;
   --color-outline-tertiary: 1px solid #595f8a;
   --color-outline-tertiary-variable: #595f8a;
 
-  /* TAGs */
-  --color-tag-bg-first: #FF405C33;
-  --color-tag-bg-second: #2AD0A033;
-  --color-tag-bg-third: #741CFF33;
-  --color-tag-bg-fourth: #FF17A233;
-  --color-tag-bg-fiveth: #FF7E3E33;
-  --color-tag-bg-sixth: #00AFDF33;
-  --color-tag-bg-seventh: #FFA50033;
-  --color-tag-bg-eighth: #265fff33;
 
   /* Botões de ação */
   --color-background-button-primary-default: #265fffb3;
@@ -159,17 +115,20 @@
   --color-background-button-theme: transparent;
   --color-background-button-theme-hover: #F1F3F6;
 
-
-  /* Cor dos ícones */
-  --color-icon-primary: #FFF;
-  --color-icon-secondary: #e1e1e5;
-  --color-icon-tertiary: #e1e1e5;
-  --color-icon-quaternary: #fff;
-  --color-icon-highlight: #256fff;
 }
 
 
 :root {
+
+  /* Cores norti design*/
+  --color-norti-black: #000;
+  --color-norti-white: #fff;
+  --color-norti-green: #00ffa3;
+  --color-norti-blue: #0031ff;
+  --color-norti-pink: #ff0062;
+
+
+  /* fonts */
   --font-family-primary: 'Anek Latin', sans-serif;
   --font-weight-regular: 400;
   --font-weight-medium: 600;
@@ -185,13 +144,11 @@
 
 body {
   font-family: 'Anek Latin', sans-serif;
-  background: var(--color-background-secondary);
+  background: var(--color-background-primary);
   color: var(--color-text-primary);
   line-height: 1.6;
   transition: background 0.3s ease, color 0.3s ease;
-  padding-top: 80px;
   height: 100vh;
-  width: 100vw;
 }
 
 h1,
