--- a/src/components/norti-header/norti-header.css
+++ b/src/components/norti-header/norti-header.css
@@ -5,13 +5,13 @@
   -webkit-backdrop-filter: blur(10px) saturate(180%);
   border: var(--color-outline-secondary);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.10);
-  border-radius: 20px;
+  border-radius: 26px;
   margin: 10px auto;
   transition: background 0.25s ease, border 0.25s ease;
   position: relative;
   z-index: 999;
   width: 80%;
-  max-width: 1200px;
+  max-width: 1440px;
 }
 
 .nortiHeader.fixed {
@@ -20,7 +20,7 @@
   left: 50%;
   transform: translateX(-50%);
   width: 80%;
-  max-width: 1200px;
+  max-width: 1440px;
   z-index: 9999;
 }
 
@@ -28,7 +28,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0px 40px;
+  padding: 0px 18px 0px 32px;
   margin: 0 auto;
 }
 
