--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     position: relative;
     overflow: hidden;
     width: 100%;
-    height: 100vh;
+    height: 800px;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -69,10 +69,26 @@
     z-index: 2;
 }
 
-.norti-hero .container {
-    position: relative;
+.norti-heroContent {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    min-width: 1440px;
+    width: 100%;
     z-index: 10;
 }
+
+.norti-hero h1 {
+    font-size: 94px;
+    line-height: 1.1;
+    margin: 20px 0;
+}
+
+.norti-hero p {
+    font-size: 28px;
+    line-height: 1.1;
+}
+
 
 @media (max-width: 1024px) {
 
