--- a/index.css
+++ b/index.css
@@ -148,6 +148,7 @@ body {
   color: var(--color-text-primary);
   line-height: 1.6;
   transition: background 0.3s ease, color 0.3s ease;
+  overscroll-behavior: smooth;
   height: 100vh;
 }
 
@@ -172,11 +173,13 @@ a:hover {
 
 /* Containers e seções */
 section {
-    display: flex;
-    padding: 60px 0;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  padding: 60px 0;
+
 }
 
 .container {
