responsiveness card done

--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@
   --color-text-disable: #B0B6C1;
   --color-text-button-white: #FFFFFF;
   --color-text-button-secondary: #265fff;
-  --color-text-button-theme: #485260;
+  --color-text-button-theme: #1e1e1e;
   --color-text-button-theme-hover: #FFFFFF;
   --color-text-button-delete: #F24A46;
 
